--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ tensorflow==2.1.0
 keras==2.3.0
 pylint==2.6.0
 google-cloud-storage==1.30.0
+pymongo==3.11.0
+dnspython==1.16.0
+python-dotenv==0.14.0
